# LeIsaac-Training

./: .gitignore  .gitmodules  CLAUDE.md  LeIsaac.ipynb  README.md  init.sh
datasets/: README.md
docs/training/: act_eval_debug_postmortem.html  act_finetune_pick_orange.html  autodl_cloud_finetune_playbook.html  dp_finetune_pick_orange.html  dp_inference_speedup_and_dynamic_timeout.html  dreamzero_finetune.html  dreamzero_finetune_v2.html  fastwam_finetune_plan.html  fastwam_lora_vs_qlora_24gb.html  fastwam_qlora_inference_debug.html  flow_matching_policy_survey.html  gpu_dataloader_zero_copy.html  gr00t_finetune_pick_orange.html  gr00t_n17_sim_wire_protocol_debug.html  lingbot_vla_finetune_plan.html  openvla_finetune_plan.html  openvla_oft_finetune_plan.html  pi05_finetune_pick_orange.html  pi05_pytorch_expert_ft_negative.html  policy_comparison_priorities.html  smolvla2_finetune_pick_orange.html  smolvla_finetune_pick_orange.html  starvla_gr00t_v2_head_design.html  starvla_qwen3vl_finetune_plan.html  starx_vla_design.html  training_roadmap.html  vla_improvement_methods_checklist.html  wallx_finetune_plan.html  xvla_finetune_plan.html
scripts/: auto_chunked_openvla.sh  auto_sweep_xvla_ckpts.sh  auto_sweep_xvla_closed_loop.sh  auto_sweep_xvla_denoise.sh  auto_sweep_xvla_ema.sh  auto_sweep_xvla_horizon.sh  auto_sweep_xvla_horizon_v2.sh  auto_sweep_xvla_prompt.sh  auto_sweep_xvla_tae.sh  cleanup_eval.sh  policy_server.sh
scripts/benchmark/: README.html  STRICT_LEADERBOARD.md  SUMMARY.md  aggregate.py  aggregate_distribution.py  aggregate_strict_leaderboard.py  baselines.tsv  flag_serve_hang.py  get_action_horizon.py  gpu_sampler.sh  merge_valid_episodes.py  run_all_baselines.sh  run_all_strict.sh  run_one.sh  run_one_strict.sh
scripts/ckpt/: README.md  merge_ckpt.py  prune_ckpts.py
scripts/evaluation/: dp_quick_eval.sh  eval_queue.sh  eval_queue.sh.bak_pre_dp  flow_sweep_watcher.sh  master_pull_watcher.sh  offline_action_mse.py  run_eval.sh  (+16 more)
server/: eval_dreamzero.sh  eval_gr00t.sh  eval_pi05.sh  pyproject.toml  serve_fastwam.sh  serve_fastwam_qlora.sh  serve_openvla.sh  serve_pi05.sh  serve_xvla.sh
server/dreamzero_leisaac/: server.py  start.sh
server/fastwam_leisaac/: __init__.py  server.py  server_qlora.py  smoke.py  smoke_qlora_inference.py
server/openvla_leisaac/: README.md  __init__.py  pyproject.toml  server.py  smoke.py
server/pi05_leisaac/: __init__.py  lora.py  server.py  train.py
server/xvla_leisaac/: server.py
(+115 files in other folders)
